@@ -54,6 +54,7 @@ SUBDIRS += \
 	@WITH_ZLIB_SUBDIR@ \
 	@WITH_FILE_SUBDIR@ \
 	@WITH_PCRE_SUBDIR@ \
+	@WITH_SYCK_SUBDIR@ \
 	@WITH_XAR_SUBDIR@ \
 	@WITH_XZ_SUBDIR@ \
 	misc \
