@@ -38,6 +38,27 @@ LIBRPMMISC_0
     pcre_maketables;
     pcre_study;
     pcre_version;
+    syck_add_sym;
+    syck_emit;
+    syck_emit_end;
+    syck_emit_item;
+    syck_emit_map;
+    syck_emit_scalar;
+    syck_emit_seq;
+    syck_emitter_flush;
+    syck_emitter_handler;
+    syck_emitter_mark_node;
+    syck_free_emitter;
+    syck_free_parser;
+    syck_lookup_sym;
+    syck_map_read;
+    syck_new_emitter;
+    syck_new_parser;
+    syck_output_handler;
+    syck_parse;
+    syck_parser_handler;
+    syck_parser_str;
+    syck_seq_read;
     xar_add_frombuffer;
     xar_close;
     xar_extract_tobuffersz;
