@@ -1,4 +1,6 @@
 5.1.7 -> 5.1.8:
+    - jbj: yaml: permit --without-syck, add some mac os x AutoFu/gcc fiddle-ups.
+    - jbj: yaml: add lsyck lua module to parse YAML.
     - jbj: finish backport and enable SUPPORT_DEBUGINFO_UPGRADE_MODEL.
     - jbj: misc: get rid of splitFoo prototypes, bury the last use in rpmfi.c.
     - jbj: PCRE in -lrpmmisc, LUA in -lrpmio linking -lrpmmisc, instead.
